# snake2d

./: .gitignore  CMakeLists.txt  main.cpp
extDeps/glad/: CMakeLists.txt
extDeps/glfw/: CMakeLists.txt
extDeps/glfw/include/GLFW/: glfw3.h
